snapshots/truth__resolve__tests__err_after_scope_end.snap
---
source: src/resolve.rs
expression: "resolve_expect_err::<ast::Block>(r#\"{\n        if (true) {\n            int a = 4;\n            int b = a * 3;\n        }\n        int b = a;  // should fail at `a`\n    }\"#,\n                                 \"in this scope\").trim()"
---
error: unknown variable 'a'
  ┌─ <input>:6:17
  │
6 │         int b = a;  // should fail at `a`
  │                 ^ not found in this scope
